added analysis script | generated graphs

--- a/apps/demo-newlib-nano/prj.conf
+++ b/apps/demo-newlib-nano/prj.conf
@@ -1,2 +1,4 @@
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=y
+CONFIG_NEWLIB_LIBC_MAX_MAPPED_REGION_SIZE=65536
+CONFIG_NEWLIB_LIBC_ALIGNED_HEAP_SIZE=65536
